0.63.0
------
1. Add '3dfull' to gradient border options. This forces the
   dark, as well as the light, portion to be drawn.
2. Use a lighter shade for the dark portion of gradient border.

0.62.9
------
1. Draw correct colour for popup of combo's in toolbars.

0.62.8
------
1. Don't round KMix's popup, or the 'unlock screen' dialog.

0.62.7
------
1. Dont draw hover for disabled listviews.
2. Stop animating progressbars when they reach max value.
3. Fix 'bleeding' of Arora's progressbar.
4. Don't round Arora's location bar popup.

0.62.6
------
1. Increase menubar item height by 1 pixel - seems to align better
   with Gtk2.
2. Improve look of comboboxes in Qt4 printer properties dialog listview.
3. Provide initial support for Bespin's XBar - disabled by default. To enable,
   call cmake with -DQTC_XBAR_SUPPORT=true
4. Draw popup menu title text!
5. Allow ability to specify if titlebar center alignment is for the full window
   width, or just the text area.
6. Fix weird highlighting behaviour in QtWebKit text edit fields.
7. Fix position of toolbar icons in Arora.
8. Fix disabled tabs.

0.62.5
------
1. Use gradient for filled slider - unless appearance is flat/raised.
2. Reduce the amount of size adjustment to menubar items when toolbar
   borders are set.
3. Fix vertical toolbar borders.
4. Slightly alter listview header size.
5. Actually include the KWin titlebar alignment code!!!
6. Adjust tab widget scroll buttons slightly.
7. Fix crash with some pure Qt4 apps.

0.62.4
------
1. When drawing filled slider groove, use fill colour for border as well.
2. Better positioning of V arrows on secondary scrollbar buttons.

0.62.3
------
1. Dont draw focus for combobox listviews.
2. When menubars have a border, adjust the menubar items accordingly.
3. Reduce menubar margins.
4. When filling the used part of a slider groove, use the slider colour 
   if set, otherwise use the highlight colour.

0.62.2
------
1. Adjust KMenu titles.